fixed z-index styling issue

--- a/src/components/createTask/createTask.css
+++ b/src/components/createTask/createTask.css
@@ -1,31 +1,31 @@
-.creating-tasks{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.creating-tasks {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .creating-tasks button{
-    border: none;
-    background-color: rgb(129, 77, 250);
-    color: white;
-    font-weight: 500;
-    font-size: 15px;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.2);
-  }
-  
-.creating-tasks select{
+.creating-tasks button {
   border: none;
-  background-color:  #ddd;
+  background-color: rgb(129, 77, 250);
+  color: white;
+  font-weight: 500;
+  font-size: 15px;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+.creating-tasks select {
+  border: none;
+  background-color: #ddd;
   padding: 0.5rem 0.75rem;
   border-radius: 5px;
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.3);
-  
+
 }
 
-.creating-tasks select:focus{
+.creating-tasks select:focus {
   outline: none;
 }
 
@@ -37,26 +37,25 @@
   position: relative;
   max-width: 100%;
   text-align: center;
-  z-index: 200;
 }
+
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
+[type="checkbox"]:not(:checked) {
   position: absolute;
   left: -9999px;
   opacity: 0;
   pointer-events: none;
 }
 
-.dropdown:checked + label,
-.dropdown:not(:checked) + label{
+.dropdown:checked+label,
+.dropdown:not(:checked)+label {
   position: relative;
   font-weight: 500;
   font-size: 13px;
-  line-height: 2;
   transition: all 200ms linear;
   border-radius: 4px;
   letter-spacing: 1px;
-  padding: .25rem .5rem;
+  padding: .5rem .5rem;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -71,37 +70,12 @@
   -ms-flex-pack: center;
   text-align: center;
   border: none;
-  background-color: #8d8c8c;
+  background-color: #ddd;
   cursor: pointer;
-  color: white;
-  box-shadow: 0 12px 35px 0 rgba(255,235,167,.15);
+  box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.3);
 }
-.dropdown:checked + label:before,
-.dropdown:not(:checked) + label:before{
-  position: fixed;
-  top: 0;
-  left: 0;
-  content: '';
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  cursor: auto;
-  pointer-events: none;
-}
-.dropdown:checked + label:before{
-  pointer-events: auto;
-}
-.dropdown:not(:checked) + label .uil {
-  font-size: 24px;
-  margin-left: 10px;
-  transition: transform 200ms linear;
-}
-.dropdown:checked + label .uil {
-  transform: rotate(180deg);
-  font-size: 24px;
-  margin-left: 10px;
-  transition: transform 200ms linear;
-}
+
+
 .section-dropdown {
   position: absolute;
   padding: 5px;
@@ -111,19 +85,20 @@
   width: 100%;
   border-radius: 4px;
   display: block;
-  box-shadow: 0 14px 35px 0 rgba(9,9,12,0.4);
-  z-index: 2;
+  box-shadow: 0 14px 35px 0 rgba(9, 9, 12, 0.4);
   opacity: 0;
   pointer-events: none;
   transform: translateY(20px);
   transition: all 200ms linear;
+  z-index: 1;
 }
 
-.dropdown:checked ~ .section-dropdown{
+.dropdown:focus~.section-dropdown {
   opacity: 1;
   pointer-events: auto;
   transform: translateY(0);
 }
+
 .section-dropdown:before {
   position: absolute;
   top: -20px;
@@ -132,20 +107,19 @@
   height: 20px;
   content: '';
   display: block;
-  z-index: 1;
 }
+
 .section-dropdown:after {
   position: absolute;
   top: -7px;
   left: 30px;
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 8px solid transparent;
-  border-right: 8px solid transparent; 
+  border-right: 8px solid transparent;
   border-bottom: 8px solid #111;
   content: '';
   display: block;
-  z-index: 2;
   transition: all 200ms linear;
 }
 
@@ -159,7 +133,7 @@
   font-size: 15px;
   border-radius: 2px;
   padding: 5px 0;
-  width:100%;
+  width: 100%;
   padding-left: 20px;
   padding-right: 15px;
   margin: 2px 0;
@@ -172,7 +146,7 @@
   -ms-align-items: center;
   align-items: center;
   justify-content: space-between;
-    -ms-flex-pack: distribute;
+  -ms-flex-pack: distribute;
 }
 
 .section-dropdown button:hover {
