--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -1,65 +1,67 @@
 /*..........popup...........*/
 
-.add-task{
-    width: 450px;
-    border-radius: 10px;
-    padding: 0.5rem 1rem;
-    background-color: rgb(214, 225, 233);
-    box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.2);
-  }
-  
-  .add-task h2{
-    color: rgb(73, 73, 73);
-  }
-  
-  .add-task h3{
-    color: rgb(129, 125, 133);
-    font-size: 16px;
-  }
-  
-  .add-task form input{
-    border: none;
-    width: 90%;
-    padding: 0.75rem 0rem 0.75rem 1rem;
-    font-size: 15px;
-    color: rgb(129, 125, 133);
-    box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
-  
-  }
-  
-  .add-task form select{
-    width: 93.5%;
-    padding: 0.75rem 0 0.75rem 1rem;
-    border: none;
-    font-size: 15px;
-    color: rgb(129, 125, 133);
-    box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
-  }
+.add-task {
+  width: 450px;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  background-color: rgb(214, 225, 233);
+  box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.2);
+  z-index: 222;
+}
 
-  .add-task form input:focus, .add-task form select:focus{
-    outline: none;
-  }
-  
-  .create-task-btn{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 1rem;
-    width: 90%;
-    margin: 2rem 0;
-  }
-  
-  .create-task-btn button{
-    border: none;
-    background-color: rgb(129, 77, 250);
-    color: white;
-    padding: 0.5rem 1.5rem;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: 500;
-  }
-  
-  .create-task-btn button:last-child{
-    background-color: gray;
-  }
+.add-task h2 {
+  color: rgb(73, 73, 73);
+}
+
+.add-task h3 {
+  color: rgb(129, 125, 133);
+  font-size: 16px;
+}
+
+.add-task form input {
+  border: none;
+  width: 90%;
+  padding: 0.75rem 0rem 0.75rem 1rem;
+  font-size: 15px;
+  color: rgb(129, 125, 133);
+  box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
+
+}
+
+.add-task form select {
+  width: 93.5%;
+  padding: 0.75rem 0 0.75rem 1rem;
+  border: none;
+  font-size: 15px;
+  color: rgb(129, 125, 133);
+  box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
+}
+
+.add-task form input:focus,
+.add-task form select:focus {
+  outline: none;
+}
+
+.create-task-btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  width: 90%;
+  margin: 2rem 0;
+}
+
+.create-task-btn button {
+  border: none;
+  background-color: rgb(129, 77, 250);
+  color: white;
+  padding: 0.5rem 1.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.create-task-btn button:last-child {
+  background-color: gray;
+}
