--- a/src/components/tasks/tasks.css
+++ b/src/components/tasks/tasks.css
@@ -1,73 +1,73 @@
-.all-tasks{
-    background-color: rgb(202, 212, 226);
-    width: 100%;
-    border-radius: 10px;
-    margin-top: 1rem;
-    padding: .5rem ;
-  }
-  
-  .all-tasks div{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1rem;
-  }
-  
-  .all-tasks button{
-    font-size: 15px;
-    background-color: white;
-    height: 30px;
-    width: 30px;
-    border: 2px #ddd solid;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.5s ease;
-  }
-  
-.all-tasks button:hover{
+.all-tasks {
+  background-color: rgb(214, 214, 214);
+  width: 100%;
+  border-radius: 5px;
+  margin-top: 1rem;
+  padding: .5rem;
+}
+
+.all-tasks div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.all-tasks button {
+  font-size: 15px;
+  background-color: white;
+  height: 30px;
+  width: 30px;
+  border: 2px #ddd solid;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.all-tasks button:hover {
   background-color: #ddd;
 }
 
-  
-.task{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #f4f4f4;
-    margin: 1rem;
-    padding: 0.25rem 1rem;
-    border-radius: 5px;
-    box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
-  }
 
-  .task:hover{
-    transform: translateY(-0.25rem);
-    transition: all 0.5s ease;
-  }
-  
-  input[type="checkbox"] {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-  }
-  
-  .checkbox {
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-    border-radius: 3px;
-    background-color: rgb(129, 77, 250);
-    border: 2px #ddd solid;
-    margin-right: 4px;
-  }
-  
-  
-  .all-tasks p{
-    font-weight: 700;
-    color: rgb(28, 77, 94);
-    text-align: center;
-  }
+.task {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #f4f4f4;
+  margin: 1rem;
+  padding: 0.25rem 1rem;
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
+}
+
+.task:hover {
+  transform: translateY(-0.25rem);
+  transition: all 0.5s ease;
+}
+
+input[type="checkbox"] {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.checkbox {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  border-radius: 3px;
+  background-color: rgb(129, 77, 250);
+  border: 2px #ddd solid;
+  margin-right: 4px;
+}
+
+
+.all-tasks p {
+  font-weight: 700;
+  color: rgb(28, 77, 94);
+  text-align: center;
+}
