--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
-body{
+body {
   font-family: 'Inter', sans-serif;
+  background-color: #f5f5f5;
 }
 
-.container{
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,8 +14,6 @@ body{
   height: 100%;
 }
 
-main{
+main {
   width: 500px;
 }
-
-
